clusters/openshift/infra/gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: openshift-default
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  controllerName: openshift.io/gateway-controller/v1
