clusters/openshift/infra/gateway/httproute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: openshift-gateway
      namespace: openshift-ingress
      sectionName: https
  hostnames:
    - argocd.gateway.apps.sno-ai-lab.vanillax.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
